--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -41,7 +41,7 @@ repos:
   hooks:
     - id: check-useless-excludes
 - repo: https://github.com/pre-commit/pre-commit-hooks
-  rev: v4.6.0
+  rev: v5.0.0
   hooks:
     - id: check-added-large-files
     - id: check-case-conflict
@@ -68,7 +68,7 @@ repos:
 
     - id: shellcheck
       name: shellcheck
-      entry: shellcheck --shell bash
+      entry: shellcheck --shell=bash
       language: system
       pass_filenames: false
       types_or: [shell]
