--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -68,14 +68,14 @@ repos:
 
     - id: shellcheck
       name: shellcheck
-      entry: shellcheck --shell=bash
+      entry: shellcheck --shell=bash --exclude=SC1017
       language: system
       pass_filenames: false
       types_or: [shell]
 
     - id: shellcheck-docs
       name: shellcheck-docs
-      entry: doccmd --language=shell --language=console --command="shellcheck --shell=bash"
+      entry: doccmd --language=shell --language=console --command="shellcheck --shell=bash --exclude=SC1017"
       language: system
       types_or: [markdown, rst]
 
