--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -28,20 +28,17 @@ jobs:
       - name: Install uv
         uses: astral-sh/setup-uv@v3
 
-      - name: Install Python
-        run: uv python install ${{ matrix.python-version }}
-
       - name: "Lint"
         run: |
-          uv run --all-extras pre-commit run --all-files --hook-stage commit --verbose
-          uv run --all-extras pre-commit run --all-files --hook-stage push --verbose
-          uv run --all-extras pre-commit run --all-files --hook-stage manual --verbose
+          uv run --all-extras --python=${{ matrix.python-version }} pre-commit run --all-files --hook-stage commit --verbose
+          uv run --all-extras --python=${{ matrix.python-version }} pre-commit run --all-files --hook-stage push --verbose
+          uv run --all-extras --python=${{ matrix.python-version }} pre-commit run --all-files --hook-stage manual --verbose
 
       - name: "Run tests"
         run: |
           # We run tests against "." and not the tests directory as we test the README
           # and documentation.
-          uv run --all-extras pytest -s -vvv --cov-fail-under 100 --cov=src/ --cov=tests/ . --cov-report=xml
+          uv run --all-extras --python=${{ matrix.python-version }} pytest -s -vvv --cov-fail-under 100 --cov=src/ --cov=tests/ . --cov-report=xml
 
       - name: "Upload coverage to Codecov"
         uses: "codecov/codecov-action@v4"
