--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -7,6 +7,7 @@ ci:
     # We use system Python, with required dependencies specified in pyproject.toml.
     # We therefore cannot use those dependencies in pre-commit CI.
     skip:
+        - actionlint
         - check-manifest
         - deptry
         - doc8
@@ -60,7 +61,7 @@ repos:
   hooks:
     - id: actionlint
       name: actionlint
-      entry: uv run --all-extras actionlint
+      entry: uv run --extra=dev actionlint
       language: python
       pass_filenames: false
       types_or: [yaml]
@@ -68,182 +69,209 @@ repos:
 
     - id: shellcheck
       name: shellcheck
-      entry: shellcheck --shell=bash --exclude=SC1017
-      language: system
+      entry: uv run --extra=dev shellcheck --shell=bash --exclude=SC1017
+      language: python
       pass_filenames: false
       types_or: [shell]
+      additional_dependencies: ["uv"]
 
     - id: shellcheck-docs
       name: shellcheck-docs
-      entry: doccmd --language=shell --language=console --command="shellcheck --shell=bash --exclude=SC1017"
-      language: system
+      entry: uv run --extra=dev doccmd --language=shell --language=console --command="shellcheck --shell=bash --exclude=SC1017"
+      language: python
       types_or: [markdown, rst]
+      additional_dependencies: ["uv"]
 
     - id: shfmt
       name: shfmt
-      entry: shfmt --write --space-redirects --indent=4
-      language: system
+      entry: uv run --extra=dev shfmt --write --space-redirects --indent=4
+      language: python
       types_or: [shell]
+      additional_dependencies: ["uv"]
 
     - id: shfmt-docs
       name: shfmt-docs
-      entry: doccmd --language=shell --language=console --skip-marker=shfmt --no-pad-file --command="shfmt --write --space-redirects --indent=4"
-      language: system
+      entry: uv run --extra=dev doccmd --language=shell --language=console --skip-marker=shfmt --no-pad-file --command="shfmt --write --space-redirects --indent=4"
+      language: python
       types_or: [markdown, rst]
+      additional_dependencies: ["uv"]
 
     - id: mypy
       name: mypy
       stages: [push]
-      entry: python -m mypy .
-      language: system
+      entry: uv run --extra=dev -m mypy .
+      language: python
       types_or: [python, toml]
       pass_filenames: false
+      additional_dependencies: ["uv"]
 
     - id: mypy-docs
       name: mypy-docs
       stages: [push]
-      entry: doccmd --language=python --command="mypy"
-      language: system
+      entry: uv run --extra=dev doccmd --language=python --command="mypy"
+      language: python
       types_or: [markdown, rst, python, toml]
+      additional_dependencies: ["uv"]
 
     - id: check-manifest
       name: check-manifest
       stages: [push]
-      entry: python -m check_manifest .
-      language: system
+      entry: uv run --extra=dev -m check_manifest .
+      language: python
       pass_filenames: false
+      additional_dependencies: ["uv"]
 
     - id: pyright
       name: pyright
       stages: [push]
-      entry: python -m pyright .
-      language: system
+      entry: uv run --extra=dev -m pyright .
+      language: python
       types_or: [python, toml]
       pass_filenames: false
+      additional_dependencies: ["uv"]
 
     - id: pyright-docs
       name: pyright-docs
       stages: [push]
-      entry: doccmd --language=python --command="pyright"
-      language: system
+      entry: uv run --extra=dev doccmd --language=python --command="pyright"
+      language: python
       types_or: [markdown, rst, python, toml]
+      additional_dependencies: ["uv"]
 
     - id: vulture
       name: vulture
-      entry: python -m vulture .
-      language: system
+      entry: uv run --extra=dev -m vulture .
+      language: python
       types_or: [python]
       pass_filenames: false
+      additional_dependencies: ["uv"]
 
     - id: vulture-docs
       name: vulture docs
-      entry: doccmd --language=python --command="vulture"
-      language: system
+      entry: uv run --extra=dev doccmd --language=python --command="vulture"
+      language: python
       types_or: [markdown, rst]
+      additional_dependencies: ["uv"]
 
     - id: pyroma
       name: pyroma
-      entry: python -m pyroma --min 10 .
-      language: system
+      entry: uv run --extra=dev -m pyroma --min 10 .
+      language: python
       pass_filenames: false
       types_or: [toml]
+      additional_dependencies: ["uv"]
 
     - id: deptry
       name: deptry
-      entry: python -m deptry src/
-      language: system
+      entry: uv run --extra=dev -m deptry src/
+      language: python
       pass_filenames: false
+      additional_dependencies: ["uv"]
 
     - id: pylint
       name: pylint
-      entry: python -m pylint *.py src/ tests/ docs/
-      language: system
+      entry: uv run --extra=dev -m pylint *.py src/ tests/ docs/
+      language: python
       stages: [manual]
       pass_filenames: false
+      additional_dependencies: ["uv"]
 
     - id: pylint-docs
       name: pylint-docs
-      entry: doccmd --language=python --command="pylint"
-      language: system
+      entry: uv run --extra=dev doccmd --language=python --command="pylint"
+      language: python
       stages: [manual]
       types_or: [markdown, rst, python, toml]
+      additional_dependencies: ["uv"]
 
     - id: ruff-check-fix
       name: Ruff check fix
-      entry: python -m ruff check --fix
-      language: system
+      entry: uv run --extra=dev -m ruff check --fix
+      language: python
       types_or: [python]
+      additional_dependencies: ["uv"]
 
     - id: ruff-check-fix-docs
       name: Ruff check fix docs
-      entry: doccmd --language=python --command="ruff check --fix"
-      language: system
+      entry: uv run --extra=dev doccmd --language=python --command="ruff check --fix"
+      language: python
       types_or: [markdown, rst]
+      additional_dependencies: ["uv"]
 
     - id: ruff-format-fix
       name: Ruff format
-      entry: python -m ruff format
-      language: system
+      entry: uv run --extra=dev -m ruff format
+      language: python
       types_or: [python]
+      additional_dependencies: ["uv"]
 
     - id: ruff-format-fix-docs
       name: Ruff format docs
-      entry: doccmd --language=python --no-pad-file --command="ruff format"
-      language: system
+      entry: uv run --extra=dev doccmd --language=python --no-pad-file --command="ruff format"
+      language: python
       types_or: [markdown, rst]
+      additional_dependencies: ["uv"]
 
     - id: doc8
       name: doc8
-      entry: python -m doc8
-      language: system
+      entry: uv run --extra=dev -m doc8
+      language: python
       types_or: [rst]
+      additional_dependencies: ["uv"]
 
     - id: interrogate
       name: interrogate
-      entry: python -m interrogate
-      language: system
+      entry: uv run --extra=dev -m interrogate
+      language: python
       types_or: [python]
+      additional_dependencies: ["uv"]
 
     - id: interrogate-docs
       name: interrogate docs
-      entry: doccmd --language=python --command="interrogate"
-      language: system
+      entry: uv run --extra=dev doccmd --language=python --command="interrogate"
+      language: python
       types_or: [markdown, rst]
+      additional_dependencies: ["uv"]
 
     - id: pyproject-fmt-fix
       name: pyproject-fmt
-      entry: pyproject-fmt
-      language: system
+      entry: uv run --extra=dev pyproject-fmt
+      language: python
       types_or: [toml]
       files: pyproject.toml
+      additional_dependencies: ["uv"]
 
     - id: linkcheck
       name: linkcheck
-      entry: make -C docs/ linkcheck SPHINXOPTS=-W
-      language: system
+      entry: uv run --extra=dev sphinx-build -M clean docs/source/ docs/build/ -W && uv run --extra=dev sphinx-build -M linkcheck docs/source/ docs/build/ -W
+      language: python
       types_or: [rst]
       stages: [manual]
       pass_filenames: false
+      additional_dependencies: ["uv"]
 
     - id: spelling
       name: spelling
-      entry: make -C docs/ spelling SPHINXOPTS=-W
-      language: system
+      entry: uv run --extra=dev sphinx-build -M clean docs/source/ docs/build/ -W && uv run --extra=dev sphinx-build -M spelling docs/source/ docs/build/ -W
+      language: python
       types_or: [rst]
       stages: [manual]
       pass_filenames: false
+      additional_dependencies: ["uv"]
 
     - id: docs
       name: Build Documentation
-      entry: make docs
-      language: system
+      entry: uv run --extra=dev sphinx-build -M clean docs/source/ docs/build/ -W && uv run --extra=dev sphinx-build -M html docs/source/ docs/build/ -W
+      language: python
       stages: [manual]
       pass_filenames: false
+      additional_dependencies: ["uv"]
 
     - id: pyright-verifytypes
       name: pyright-verifytypes
       stages: [push]
-      entry: python -m pyright --verifytypes vws
-      language: system
+      entry: uv run --extra=dev -m pyright --verifytypes vws
+      language: python
       pass_filenames: false
       types_or: [python]
+      additional_dependencies: ["uv"]
