--- a/pyproject.toml
+++ b/pyproject.toml
@@ -50,7 +50,7 @@ optional-dependencies.dev = [
     "mypy==1.11.2",
     "pre-commit==3.8.0",
     "pydocstyle==6.3",
-    "pyenchant==3.2.2",
+    "pyenchant==3.3.0rc1",
     "pygments==2.18.0",
     "pylint==3.3.1",
     "pylint-per-file-ignores==1.3.2",
