--- a/pyproject.toml
+++ b/pyproject.toml
@@ -76,7 +76,7 @@ optional-dependencies.dev = [
     "vws-python-mock==2024.8.30",
     "vws-test-fixtures==2023.3.5",
 ]
-optional-dependencies.release = [ "build==1.2.2.post1", "check-wheel-contents==0.6.0" ]
+optional-dependencies.release = [ "check-wheel-contents==0.6.0" ]
 urls.Documentation = "https://vws-python.readthedocs.io/en/latest/"
 urls.Source = "https://github.com/VWS-Python/vws-python"
 
