--- a/pyproject.toml
+++ b/pyproject.toml
@@ -44,6 +44,7 @@ optional-dependencies.dev = [
     "deptry==0.20.0",
     "doc8==1.1.2",
     "doccmd==2024.10.8.12",
+    "docformatter==1.7.5",
     "freezegun==1.5.1",
     "furo==2024.8.6",
     "interrogate==1.7.0",
@@ -257,6 +258,9 @@ spelling-private-dict-file = 'spelling_private_dict.txt'
 # Tells whether to store unknown words to indicated private dictionary in
 # --spelling-private-dict-file option instead of raising a message.
 spelling-store-unknown-words = 'no'
+
+[tool.docformatter]
+make-summary-multi-line = true
 
 [tool.check-manifest]
 
