--- a/.github/workflows/lint.yml
+++ b/.github/workflows/lint.yml
@@ -10,15 +10,15 @@ on:
   schedule:
     # * is a special character in YAML so you have to quote this string
     # Run at 1:00 every day
-    - cron: '0 1 * * *'
+    - cron: 0 1 * * *
 
 jobs:
   build:
 
     strategy:
       matrix:
-        python-version: ["3.12"]
-        platform: ["ubuntu-latest", "windows-latest"]
+        python-version: ['3.12']
+        platform: [ubuntu-latest, windows-latest]
 
     runs-on: ${{ matrix.platform }}
 
@@ -28,7 +28,7 @@ jobs:
       - name: Install uv
         uses: astral-sh/setup-uv@v3
 
-      - name: "Lint"
+      - name: Lint
         run: |
           uv run --extra=dev pre-commit run --all-files --hook-stage pre-commit --verbose
           uv run --extra=dev pre-commit run --all-files --hook-stage pre-push --verbose
