--- a/pyproject.toml
+++ b/pyproject.toml
@@ -76,6 +76,7 @@ optional-dependencies.dev = [
     "vulture==2.13",
     "vws-python-mock==2024.8.30",
     "vws-test-fixtures==2023.3.5",
+    "yamlfix==1.17.0",
 ]
 optional-dependencies.release = [ "check-wheel-contents==0.6.0" ]
 urls.Documentation = "https://vws-python.readthedocs.io/en/latest/"
@@ -384,3 +385,7 @@ ignore_names = [
 
 # Duplicate some of .gitignore
 exclude = [ ".venv" ]
+
+[tool.yamlfix]
+section_whitelines = 1
+whitelines = 1
