--- a/pyproject.toml
+++ b/pyproject.toml
@@ -35,9 +35,9 @@ dynamic = [
 ]
 dependencies = [
     "beartype>=0.18.5",
-    "requests",
-    "urllib3",
-    "vws-auth-tools",
+    "requests>=2.32.3",
+    "urllib3>=2.2.3",
+    "vws-auth-tools>=2024.7.12",
 ]
 optional-dependencies.dev = [
     "actionlint-py==1.7.3.17",
