--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -120,7 +120,7 @@ repos:
       - id: mypy
         name: mypy
         stages: [pre-push]
-        entry: uv run --extra=dev -m mypy .
+        entry: uv run --extra=dev -m mypy
         language: python
         types_or: [python, toml]
         pass_filenames: false
