Pin uv for pre-commit hook

--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -77,14 +77,14 @@ repos:
         language: python
         pass_filenames: false
         types_or: [yaml]
-        additional_dependencies: [uv]
+        additional_dependencies: [uv==0.4.25]
 
       - id: docformatter
         name: docformatter
         entry: uv run --extra=dev -m docformatter --in-place
         language: python
         types_or: [python]
-        additional_dependencies: [uv]
+        additional_dependencies: [uv==0.4.25]
 
       - id: shellcheck
         name: shellcheck
@@ -92,7 +92,7 @@ repos:
         language: python
         pass_filenames: false
         types_or: [shell]
-        additional_dependencies: [uv]
+        additional_dependencies: [uv==0.4.25]
 
       - id: shellcheck-docs
         name: shellcheck-docs
@@ -100,14 +100,14 @@ repos:
           --shell=bash"
         language: python
         types_or: [markdown, rst]
-        additional_dependencies: [uv]
+        additional_dependencies: [uv==0.4.25]
 
       - id: shfmt
         name: shfmt
         entry: uv run --extra=dev shfmt --write --space-redirects --indent=4
         language: python
         types_or: [shell]
-        additional_dependencies: [uv]
+        additional_dependencies: [uv==0.4.25]
 
       - id: shfmt-docs
         name: shfmt-docs
@@ -115,7 +115,7 @@ repos:
           --no-pad-file --command="shfmt --write --space-redirects --indent=4"
         language: python
         types_or: [markdown, rst]
-        additional_dependencies: [uv]
+        additional_dependencies: [uv==0.4.25]
 
       - id: mypy
         name: mypy
@@ -124,7 +124,7 @@ repos:
         language: python
         types_or: [python, toml]
         pass_filenames: false
-        additional_dependencies: [uv]
+        additional_dependencies: [uv==0.4.25]
 
       - id: mypy-docs
         name: mypy-docs
@@ -132,7 +132,7 @@ repos:
         entry: uv run --extra=dev doccmd --language=python --command="mypy"
         language: python
         types_or: [markdown, rst, python, toml]
-        additional_dependencies: [uv]
+        additional_dependencies: [uv==0.4.25]
 
       - id: check-manifest
         name: check-manifest
@@ -140,7 +140,7 @@ repos:
         entry: uv run --extra=dev -m check_manifest
         language: python
         pass_filenames: false
-        additional_dependencies: [uv]
+        additional_dependencies: [uv==0.4.25]
 
       - id: pyright
         name: pyright
@@ -149,7 +149,7 @@ repos:
         language: python
         types_or: [python, toml]
         pass_filenames: false
-        additional_dependencies: [uv]
+        additional_dependencies: [uv==0.4.25]
 
       - id: pyright-docs
         name: pyright-docs
@@ -157,7 +157,7 @@ repos:
         entry: uv run --extra=dev doccmd --language=python --command="pyright"
         language: python
         types_or: [markdown, rst, python, toml]
-        additional_dependencies: [uv]
+        additional_dependencies: [uv==0.4.25]
 
       - id: vulture
         name: vulture
@@ -165,14 +165,14 @@ repos:
         language: python
         types_or: [python]
         pass_filenames: false
-        additional_dependencies: [uv]
+        additional_dependencies: [uv==0.4.25]
 
       - id: vulture-docs
         name: vulture docs
         entry: uv run --extra=dev doccmd --language=python --command="vulture"
         language: python
         types_or: [markdown, rst]
-        additional_dependencies: [uv]
+        additional_dependencies: [uv==0.4.25]
 
       - id: pyroma
         name: pyroma
@@ -180,14 +180,14 @@ repos:
         language: python
         pass_filenames: false
         types_or: [toml]
-        additional_dependencies: [uv]
+        additional_dependencies: [uv==0.4.25]
 
       - id: deptry
         name: deptry
         entry: uv run --extra=dev -m deptry src/
         language: python
         pass_filenames: false
-        additional_dependencies: [uv]
+        additional_dependencies: [uv==0.4.25]
 
       - id: pylint
         name: pylint
@@ -195,7 +195,7 @@ repos:
         language: python
         stages: [manual]
         pass_filenames: false
-        additional_dependencies: [uv]
+        additional_dependencies: [uv==0.4.25]
 
       - id: pylint-docs
         name: pylint-docs
@@ -203,28 +203,28 @@ repos:
         language: python
         stages: [manual]
         types_or: [markdown, rst, python, toml]
-        additional_dependencies: [uv]
+        additional_dependencies: [uv==0.4.25]
 
       - id: ruff-check-fix
         name: Ruff check fix
         entry: uv run --extra=dev -m ruff check --fix
         language: python
         types_or: [python]
-        additional_dependencies: [uv]
+        additional_dependencies: [uv==0.4.25]
 
       - id: ruff-check-fix-docs
         name: Ruff check fix docs
         entry: uv run --extra=dev doccmd --language=python --command="ruff check --fix"
         language: python
         types_or: [markdown, rst]
-        additional_dependencies: [uv]
+        additional_dependencies: [uv==0.4.25]
 
       - id: ruff-format-fix
         name: Ruff format
         entry: uv run --extra=dev -m ruff format
         language: python
         types_or: [python]
-        additional_dependencies: [uv]
+        additional_dependencies: [uv==0.4.25]
 
       - id: ruff-format-fix-docs
         name: Ruff format docs
@@ -232,28 +232,28 @@ repos:
           format"
         language: python
         types_or: [markdown, rst]
-        additional_dependencies: [uv]
+        additional_dependencies: [uv==0.4.25]
 
       - id: doc8
         name: doc8
         entry: uv run --extra=dev -m doc8
         language: python
         types_or: [rst]
-        additional_dependencies: [uv]
+        additional_dependencies: [uv==0.4.25]
 
       - id: interrogate
         name: interrogate
         entry: uv run --extra=dev -m interrogate
         language: python
         types_or: [python]
-        additional_dependencies: [uv]
+        additional_dependencies: [uv==0.4.25]
 
       - id: interrogate-docs
         name: interrogate docs
         entry: uv run --extra=dev doccmd --language=python --command="interrogate"
         language: python
         types_or: [markdown, rst]
-        additional_dependencies: [uv]
+        additional_dependencies: [uv==0.4.25]
 
       - id: pyproject-fmt-fix
         name: pyproject-fmt
@@ -261,7 +261,7 @@ repos:
         language: python
         types_or: [toml]
         files: pyproject.toml
-        additional_dependencies: [uv]
+        additional_dependencies: [uv==0.4.25]
 
       - id: linkcheck
         name: linkcheck
@@ -270,7 +270,7 @@ repos:
         types_or: [rst]
         stages: [manual]
         pass_filenames: false
-        additional_dependencies: [uv]
+        additional_dependencies: [uv==0.4.25]
 
       - id: spelling
         name: spelling
@@ -279,7 +279,7 @@ repos:
         types_or: [rst]
         stages: [manual]
         pass_filenames: false
-        additional_dependencies: [uv]
+        additional_dependencies: [uv==0.4.25]
 
       - id: docs
         name: Build Documentation
@@ -287,7 +287,7 @@ repos:
         language: python
         stages: [manual]
         pass_filenames: false
-        additional_dependencies: [uv]
+        additional_dependencies: [uv==0.4.25]
 
       - id: pyright-verifytypes
         name: pyright-verifytypes
@@ -296,11 +296,11 @@ repos:
         language: python
         pass_filenames: false
         types_or: [python]
-        additional_dependencies: [uv]
+        additional_dependencies: [uv==0.4.25]
 
       - id: yamlfix
         name: yamlfix
         entry: uv run --extra=dev yamlfix
         language: python
         types_or: [yaml]
-        additional_dependencies: [uv]
+        additional_dependencies: [uv==0.4.25]
