--- a/pyproject.toml
+++ b/pyproject.toml
@@ -2,7 +2,7 @@
 build-backend = "setuptools.build_meta"
 requires = [
     "setuptools",
-    "setuptools-scm[toml]>=7.1",
+    "setuptools-scm>=8.1.0",
     "wheel",
 ]
 
