Only allow assert in tests

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -123,7 +123,10 @@ lint.ignore = [
     # Ignore "too-many-*" errors as they seem to get in the way more than
     # helping.
     "PLR0913",
-    # Allow 'assert' as we use it for tests.
+]
+
+lint.per-file-ignores."tests/*.py" = [
+    # Do not require tests to have a one-line summary.
     "S101",
 ]
 
