Put back conflict ignore

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -120,6 +120,8 @@ lint.ignore = [
     "D200",
     "D205",
     "D212",
+    # Ruff warns that this conflicts with the formatter.
+    "ISC001",
     # Ignore "too-many-*" errors as they seem to get in the way more than
     # helping.
     "PLR0913",
