Use new mypy plugin for strict kwargs

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -49,6 +49,7 @@ optional-dependencies.dev = [
     "furo==2024.8.6",
     "interrogate==1.7.0",
     "mypy[faster-cache]==1.14.0",
+    "mypy-strict-kwargs==2024.12.24",
     "pre-commit==4.0.1",
     "pydocstyle==6.3",
     "pyenchant==3.3.0rc1",
@@ -334,6 +335,9 @@ strict = true
 files = [ "." ]
 exclude = [ "build" ]
 follow_untyped_imports = true
+plugins = [
+    "mypy_strict_kwargs",
+]
 
 [tool.pyright]
 
