--- a/pyproject.toml
+++ b/pyproject.toml
@@ -341,6 +341,7 @@ plugins = [
 
 [tool.pyright]
 
+enableTypeIgnoreComments = false
 reportUnnecessaryTypeIgnoreComment = true
 typeCheckingMode = "strict"
 
