--- a/.gitignore
+++ b/.gitignore
@@ -98,8 +98,9 @@ secrets.tar
 # mypy
 .mypy_cache/
 
-# macOS attributes
-*.DS_Store
+# Ignore Mac DS_Store files
+.DS_Store
+**/.DS_Store
 
 # pyre
 .pyre/
