--- a/pyproject.toml
+++ b/pyproject.toml
@@ -70,6 +70,7 @@ optional-dependencies.dev = [
     "shfmt-py==3.7.0.1",
     "sphinx==8.1.3",
     "sphinx-copybutton==0.5.2",
+    "sphinx-lint==1.0.0",
     "sphinx-substitution-extensions==2025.1.2",
     "sphinxcontrib-spelling==8.0.1",
     "sybil==9.0.0",
