Use new format for pylint-per-file-ignores

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -55,7 +55,7 @@ optional-dependencies.dev = [
     "pyenchant==3.3.0rc1",
     "pygments==2.19.1",
     "pylint==3.3.3",
-    "pylint-per-file-ignores==1.3.2",
+    "pylint-per-file-ignores==1.4.0",
     "pyproject-fmt==2.5.0",
     "pyright==1.1.392.post0",
     "pyroma==4.2",
@@ -244,16 +244,14 @@ disable = [
     'useless-type-doc',
 ]
 
-# This format is described in the following issue:
-# https://github.com/christopherpickering/pylint-per-file-ignores/issues/160
-#
 # We ignore invalid names because:
 # - We want to use generated module names, which may not be valid, but are never seen.
-# - We want to use global variables in documentation, which may not be uppercase
-per-file-ignores = """
-docs/:invalid-name
-doccmd_README_rst.*.py:invalid-name
-"""
+# - We want to use global variables in documentation, which may not be uppercase.
+# - conf.py is a Sphinx configuration file which requires lowercase global variable names.
+per-file-ignores = [
+    "docs/:invalid-name",
+    "doccmd_README_rst.*.py:invalid-name",
+]
 
 [tool.pylint.'FORMAT']
 
