Use SphinxConfig to avoid some duplication

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -71,6 +71,7 @@ optional-dependencies.dev = [
     "sphinx==8.2.0",
     "sphinx-copybutton==0.5.2",
     "sphinx-lint==1.0.0",
+    "sphinx-pyproject==0.3.0",
     "sphinx-substitution-extensions==2025.2.19",
     "sphinxcontrib-spelling==8.0.1",
     "sybil==9.1.0",
