Use cache on publish site

--- a/.github/workflows/publish-site.yml
+++ b/.github/workflows/publish-site.yml
@@ -24,4 +24,5 @@ jobs:
           pyproject_extras: dev
           python_version: '3.13'
           sphinx_build_options: -W
+          cache: true
           publish: ${{ github.ref_name == 'main' }}
