Run pre-commit hooks on only one stage each

--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -45,31 +45,49 @@ repos:
   - repo: meta
     hooks:
       - id: check-useless-excludes
+        stages: [pre-commit]
   - repo: https://github.com/pre-commit/pre-commit-hooks
     rev: v6.0.0
     hooks:
       - id: check-added-large-files
+        stages: [pre-commit]
       - id: check-case-conflict
+        stages: [pre-commit]
       - id: check-executables-have-shebangs
+        stages: [pre-commit]
       - id: check-merge-conflict
+        stages: [pre-commit]
       - id: check-shebang-scripts-are-executable
+        stages: [pre-commit]
       - id: check-symlinks
+        stages: [pre-commit]
       - id: check-json
+        stages: [pre-commit]
       - id: check-toml
+        stages: [pre-commit]
       - id: check-vcs-permalinks
+        stages: [pre-commit]
       - id: check-yaml
+        stages: [pre-commit]
       - id: end-of-file-fixer
+        stages: [pre-commit]
       - id: file-contents-sorter
         files: spelling_private_dict\.txt$
+        stages: [pre-commit]
       - id: trailing-whitespace
+        stages: [pre-commit]
   - repo: https://github.com/pre-commit/pygrep-hooks
     rev: v1.10.0
     hooks:
       - id: rst-directive-colons
+        stages: [pre-commit]
       - id: rst-inline-touching-normal
+        stages: [pre-commit]
       - id: text-unicode-replacement-char
+        stages: [pre-commit]
       - id: rst-backticks
 
+        stages: [pre-commit]
   - repo: local
     hooks:
       - id: actionlint
@@ -79,6 +97,7 @@ repos:
         pass_filenames: false
         types_or: [yaml]
         additional_dependencies: [uv==0.6.3]
+        stages: [pre-commit]
 
       - id: docformatter
         name: docformatter
@@ -86,6 +105,7 @@ repos:
         language: python
         types_or: [python]
         additional_dependencies: [uv==0.6.3]
+        stages: [pre-commit]
 
       - id: shellcheck
         name: shellcheck
@@ -93,6 +113,7 @@ repos:
         language: python
         types_or: [shell]
         additional_dependencies: [uv==0.6.3]
+        stages: [pre-commit]
 
       - id: shellcheck-docs
         name: shellcheck-docs
@@ -101,6 +122,7 @@ repos:
         language: python
         types_or: [markdown, rst]
         additional_dependencies: [uv==0.6.3]
+        stages: [pre-commit]
 
       - id: shfmt
         name: shfmt
@@ -108,6 +130,7 @@ repos:
         language: python
         types_or: [shell]
         additional_dependencies: [uv==0.6.3]
+        stages: [pre-commit]
 
       - id: shfmt-docs
         name: shfmt-docs
@@ -116,6 +139,7 @@ repos:
         language: python
         types_or: [markdown, rst]
         additional_dependencies: [uv==0.6.3]
+        stages: [pre-commit]
 
       - id: mypy
         name: mypy
@@ -166,6 +190,7 @@ repos:
         types_or: [python]
         pass_filenames: false
         additional_dependencies: [uv==0.6.3]
+        stages: [pre-commit]
 
       - id: vulture-docs
         name: vulture docs
@@ -173,6 +198,7 @@ repos:
         language: python
         types_or: [markdown, rst]
         additional_dependencies: [uv==0.6.3]
+        stages: [pre-commit]
 
       - id: pyroma
         name: pyroma
@@ -181,6 +207,7 @@ repos:
         pass_filenames: false
         types_or: [toml]
         additional_dependencies: [uv==0.6.3]
+        stages: [pre-commit]
 
       - id: deptry
         name: deptry
@@ -188,6 +215,7 @@ repos:
         language: python
         pass_filenames: false
         additional_dependencies: [uv==0.6.3]
+        stages: [pre-commit]
 
       - id: pylint
         name: pylint
@@ -211,6 +239,7 @@ repos:
         language: python
         types_or: [python]
         additional_dependencies: [uv==0.6.3]
+        stages: [pre-commit]
 
       - id: ruff-check-fix-docs
         name: Ruff check fix docs
@@ -218,6 +247,7 @@ repos:
         language: python
         types_or: [markdown, rst]
         additional_dependencies: [uv==0.6.3]
+        stages: [pre-commit]
 
       - id: ruff-format-fix
         name: Ruff format
@@ -225,6 +255,7 @@ repos:
         language: python
         types_or: [python]
         additional_dependencies: [uv==0.6.3]
+        stages: [pre-commit]
 
       - id: ruff-format-fix-docs
         name: Ruff format docs
@@ -233,6 +264,7 @@ repos:
         language: python
         types_or: [markdown, rst]
         additional_dependencies: [uv==0.6.3]
+        stages: [pre-commit]
 
       - id: doc8
         name: doc8
@@ -240,6 +272,7 @@ repos:
         language: python
         types_or: [rst]
         additional_dependencies: [uv==0.6.3]
+        stages: [pre-commit]
 
       - id: interrogate
         name: interrogate
@@ -247,6 +280,7 @@ repos:
         language: python
         types_or: [python]
         additional_dependencies: [uv==0.6.3]
+        stages: [pre-commit]
 
       - id: interrogate-docs
         name: interrogate docs
@@ -254,6 +288,7 @@ repos:
         language: python
         types_or: [markdown, rst]
         additional_dependencies: [uv==0.6.3]
+        stages: [pre-commit]
 
       - id: pyproject-fmt-fix
         name: pyproject-fmt
@@ -262,6 +297,7 @@ repos:
         types_or: [toml]
         files: pyproject.toml
         additional_dependencies: [uv==0.6.3]
+        stages: [pre-commit]
 
       - id: linkcheck
         name: linkcheck
@@ -304,6 +340,7 @@ repos:
         language: python
         types_or: [yaml]
         additional_dependencies: [uv==0.6.3]
+        stages: [pre-commit]
 
       - id: sphinx-lint
         name: sphinx-lint
@@ -311,3 +348,4 @@ repos:
         language: python
         types_or: [rst]
         additional_dependencies: [uv==0.6.3]
+        stages: [pre-commit]
