--- a/pyproject.toml
+++ b/pyproject.toml
@@ -248,7 +248,7 @@ disable = [
 # - We want to use global variables in documentation, which may not be uppercase.
 # - conf.py is a Sphinx configuration file which requires lowercase global variable names.
 per-file-ignores = [
-    "docs/:invalid-name",
+    "docs/source/conf.py:invalid-name",
     "doccmd_README_rst.*.py:invalid-name",
 ]
 
