--- a/pyproject.toml
+++ b/pyproject.toml
@@ -250,7 +250,7 @@ disable = [
 per-file-ignores = [
     "docs/source/conf.py:invalid-name",
     "docs/source/doccmd_*.py:invalid-name",
-    "doccmd_README_rst.*.py:invalid-name",
+    "doccmd_README_rst_*.py:invalid-name",
 ]
 
 [tool.pylint.'FORMAT']
