--- a/pyproject.toml
+++ b/pyproject.toml
@@ -51,7 +51,7 @@ optional-dependencies.dev = [
     "pre-commit==4.3.0",
     "pydocstyle==6.3",
     "pygments==2.19.2",
-    "pylint==3.3.8",
+    "pylint[spelling]==3.3.8",
     "pylint-per-file-ignores==2.0.3",
     "pyproject-fmt==2.6.0",
     "pyright==1.1.405",
