Remove docs/Makefile and update pre-commit to use sphinx-build directly

--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -117,7 +117,8 @@ repos:
 
       - id: shellcheck-docs
         name: shellcheck-docs
-        entry: uv run --extra=dev doccmd --language=shell --language=console --command="shellcheck
+        entry:
+          uv run --extra=dev doccmd --language=shell --language=console --command="shellcheck
           --shell=bash"
         language: python
         types_or: [markdown, rst]
@@ -134,7 +135,8 @@ repos:
 
       - id: shfmt-docs
         name: shfmt-docs
-        entry: uv run --extra=dev doccmd --language=shell --language=console --skip-marker=shfmt
+        entry:
+          uv run --extra=dev doccmd --language=shell --language=console --skip-marker=shfmt
           --no-pad-file --command="shfmt --write --space-redirects --indent=4"
         language: python
         types_or: [markdown, rst]
@@ -259,7 +261,8 @@ repos:
 
       - id: ruff-format-fix-docs
         name: Ruff format docs
-        entry: uv run --extra=dev doccmd --language=python --no-pad-file --command="ruff
+        entry:
+          uv run --extra=dev doccmd --language=python --no-pad-file --command="ruff
           format"
         language: python
         types_or: [markdown, rst]
@@ -301,7 +304,7 @@ repos:
 
       - id: linkcheck
         name: linkcheck
-        entry: make -C docs/ linkcheck SPHINXOPTS=-W
+        entry: uv run --extra=dev sphinx-build -M linkcheck docs/source docs/build -W
         language: python
         types_or: [rst]
         stages: [manual]
@@ -310,7 +313,7 @@ repos:
 
       - id: spelling
         name: spelling
-        entry: make -C docs/ spelling SPHINXOPTS=-W
+        entry: uv run --extra=dev sphinx-build -M spelling docs/source docs/build -W
         language: python
         types_or: [rst]
         stages: [manual]
@@ -319,7 +322,7 @@ repos:
 
       - id: docs
         name: Build Documentation
-        entry: make docs
+        entry: uv run --extra=dev sphinx-build -M html docs/source docs/build
         language: python
         stages: [manual]
         pass_filenames: false
